# saem-py-vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  ESS_和_MCMC_SAEM_结合的方法论改进文章适合发什么统计期刊.docx  LICENSE  MANIFEST.in  MATH_CLARITY_GUIDE.md  README.md  VALIDATION_REPORT.md  debug_is.py  debug_is2.py  demo_estimation.py  mcmc_mh算法领域抽样领域重要的文章有哪些_有哪些前沿的.docx  plan.md  plan1.md  pyproject.toml  setup.py  test_cutoff.py  test_error_models.py  test_gaussian_is.py  test_gaussian_proposal.py  test_gq_nodes.py  test_is_samples.py  test_likelihood.py  test_likelihood_fix.py  test_r.R  test_respar.py  test_tpdf.R
.github/workflows/: ci.yml
.kiro/specs/pypi-package/: design.md  requirements.md  tasks.md
.kiro/specs/saemix-python-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/saemix-robustness-optimization/: design.md  requirements.md  tasks.md
docs/: README.md  api_overview.md  faq.md  installation.md  quickstart.md  workflow.md
example_results/: diagnostics.csv  individual_params.csv  omega.csv  parameters.csv  predictions.csv  summary.txt
examples/: basic_example.py
openspec/: project.md
paper_plan/: plan.md
saemix/: AGENTS.md  __init__.py  _version.py  compare.py  control.py  data.py  diagnostics.py  export.py  main.py  model.py  plot_options.py  results.py  simulation.py  stepwise.py  utils.py
saemix-main/: AGENTS.md
saemix/algorithm/: AGENTS.md  __init__.py  conddist.py  estep.py  fim.py  initialization.py  likelihood.py  map_estimation.py  mstep.py  predict.py  saem.py
tests/: AGENTS.md  conftest.py  test_build_verification.py  test_compare_properties.py  test_conddist_properties.py  test_data.py  test_data_properties.py  test_dependency_handling.py  test_diagnostics.py  test_export_properties.py  test_integration.py  test_integration_enhanced.py  test_model.py  test_numerical_stability_properties.py  test_package_structure.py  test_plot_options_properties.py  test_regression.py  test_results_properties.py  test_rng_properties.py  test_simulation_properties.py  test_stepwise_properties.py  test_utils.py  test_utils_properties.py
